[package]
name = "rust-odemcd"
version = "0.1.0"
authors = ["damody <liam.huang@4ipnet.com>"]

[dependencies]
rust-ini = "0.10"
log = "0.4"
simplelog = "0.5"
beanstalkd = {path ="../rust-beanstalkd"}
multiqueue = "0.3"
quick-protobuf = "0.6.0" # {path ="quick-protobuf"}
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
lazy_static = "1.0"
libc = "0.2.0"
curl = "0.4"
select = "0.4"
rand = "0.4"
hlua = "0.3"
rust-crypto = "^0.2"
url = "1.7"
subprocess = "0.1"
regex = "0.2"
text_io = "0.1"
strfmt = "0.1.6"
enum_primitive = "*"
num = "0.1"
